--- a/wasm_wrapper/Cargo.toml
+++ b/wasm_wrapper/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-new-innov-utils = { path = "../../" }
+mcw-anesth-adverse-events-analyzer = { path = "../" }
 wasm-bindgen = "0.2.67"
-serde_json = "1.0"
-chrono = { version = "0.4.15", features = ["serde"] }
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
+
+[workspace]
