--- a/web/package.json
+++ b/web/package.json
@@ -7,15 +7,16 @@
     "start": "sirv public",
     "clean": "rm -rf public/build"
   },
-	"browser": "public/build/bundle.js",
-	"main": "public/build/bundle.js",
-	"module": "public/build/app.mjs",
-	"files": [
-		"public/build/**"
-	],
+  "browser": "public/build/bundle.js",
+  "main": "public/build/bundle.js",
+  "module": "public/build/app.mjs",
+  "files": [
+    "public/build/**"
+  ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@wasm-tool/rollup-plugin-rust": "^1.0.6",
     "eslint": "^7.28.0",
     "eslint-plugin-svelte3": "^3.2.0",
@@ -25,6 +26,10 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.38.2",
+    "svelte-check": "^2.1.0",
+    "svelte-preprocess": "^4.7.3",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.2",
     "wasm-pack": "^0.9.1"
   },
   "dependencies": {
