--- a/wasm_wrapper/Cargo.toml
+++ b/wasm_wrapper/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 adverse-events = { path = "../" }
+chrono = "0.4.19"
 lazy_static = "1.4.0"
 serde_json = "1.0.64"
 wasm-bindgen = "0.2.67"
