--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "papaparse": "^5.3.1",
-    "sirv-cli": "^1.0.12"
+    "sirv-cli": "^1.0.12",
+    "svelte-frappe-charts": "^1.8.3"
   }
 }
