--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/d3-scale-chromatic": "^2.0.0",
     "@wasm-tool/rollup-plugin-rust": "^1.0.6",
     "eslint": "^7.28.0",
     "eslint-plugin-svelte3": "^3.2.0",
@@ -33,6 +34,7 @@
     "wasm-pack": "^0.9.1"
   },
   "dependencies": {
+    "d3-scale-chromatic": "^3.0.0",
     "papaparse": "^5.3.1",
     "sirv-cli": "^1.0.12",
     "svelte-frappe-charts": "^1.8.3"
