--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "papaparse": "^5.3.1",
     "sirv-cli": "^1.0.12",
-    "svelte-frappe-charts": "^1.8.3"
+    "svelte-frappe-charts": "^1.8.3",
+    "svelte-tabs": "^1.1.0"
   }
 }
