--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "d3-scale-chromatic": "^3.0.0",
+    "localforage": "^1.9.0",
     "papaparse": "^5.3.1",
     "sirv-cli": "^1.0.12",
     "svelte-frappe-charts": "^1.8.3",
