--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 2019,
 		"sourceType": "module"
@@ -7,9 +8,7 @@
 		"browser": true,
 		"es6": true
 	},
-	"plugins": [
-		"svelte3"
-	],
+	"plugins": ["svelte3"],
 	"extends": "eslint:recommended",
 	"rules": {
 		"no-console": ["warn", { "allow": ["warn", "error"] }],
