--- a/web/package.json
+++ b/web/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/d3-scale-chromatic": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "@wasm-tool/rollup-plugin-rust": "^1.0.6",
     "eslint": "^7.28.0",
     "eslint-plugin-svelte3": "^3.2.0",
@@ -35,6 +38,7 @@
   },
   "dependencies": {
     "d3-scale-chromatic": "^3.0.0",
+    "downloadjs": "^1.4.7",
     "localforage": "^1.9.0",
     "papaparse": "^5.3.1",
     "sirv-cli": "^1.0.12",
