--- a/web/package.json
+++ b/web/package.json
@@ -1,48 +1,37 @@
 {
-  "name": "mcw-anesth-adverse-events",
-  "version": "0.1.0",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
-    "clean": "rm -rf public/build"
-  },
-  "browser": "public/build/bundle.js",
-  "main": "public/build/bundle.js",
-  "module": "public/build/app.mjs",
-  "files": [
-    "public/build/**"
-  ],
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/d3-scale-chromatic": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "@wasm-tool/rollup-plugin-rust": "^1.0.6",
-    "eslint": "^7.28.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "rollup": "^2.51.1",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.38.2",
-    "svelte-check": "^2.1.0",
-    "svelte-preprocess": "^4.7.3",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.2",
-    "wasm-pack": "^0.9.1"
-  },
-  "dependencies": {
-    "d3-scale-chromatic": "^3.0.0",
-    "downloadjs": "^1.4.7",
-    "localforage": "^1.9.0",
-    "papaparse": "^5.3.1",
-    "sirv-cli": "^1.0.12",
-    "svelte-frappe-charts": "^1.8.3",
-    "svelte-tabs": "^1.1.0"
-  }
+	"name": "mcw-anesth-adverse-events",
+	"version": "0.1.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"devDependencies": {
+		"@rollup/plugin-replace": "^2.4.2",
+		"@rollup/plugin-typescript": "^8.2.1",
+		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+		"@types/d3-scale-chromatic": "^2.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.0",
+		"@typescript-eslint/parser": "^4.28.0",
+		"@wasm-tool/rollup-plugin-rust": "^1.0.6",
+		"eslint": "^7.28.0",
+		"eslint-plugin-svelte3": "^3.2.0",
+		"svelte": "^3.38.2",
+		"svelte-check": "^2.1.0",
+		"svelte-preprocess": "^4.7.3",
+		"tslib": "^2.3.0",
+		"typescript": "^4.3.2",
+		"vite": "^2.3.8",
+		"vite-tsconfig-paths": "^3.3.13",
+		"wasm-pack": "^0.9.1"
+	},
+	"dependencies": {
+		"d3-scale-chromatic": "^3.0.0",
+		"downloadjs": "^1.4.7",
+		"localforage": "^1.9.0",
+		"papaparse": "^5.3.1",
+		"sirv-cli": "^1.0.12",
+		"svelte-frappe-charts": "^1.8.3",
+		"svelte-tabs": "^1.1.0"
+	}
 }
