--- a/web/package.json
+++ b/web/package.json
@@ -7,31 +7,31 @@
 		"serve": "vite preview"
 	},
 	"devDependencies": {
-		"@rollup/plugin-replace": "^2.4.2",
-		"@rollup/plugin-typescript": "^8.2.1",
-		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
-		"@types/d3-scale-chromatic": "^2.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.28.0",
-		"@typescript-eslint/parser": "^4.28.0",
-		"@wasm-tool/rollup-plugin-rust": "^1.0.6",
-		"eslint": "^7.28.0",
+		"@rollup/plugin-typescript": "^8.2.5",
+		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.17",
+		"@types/d3-scale-chromatic": "^3.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.29.1",
+		"@typescript-eslint/parser": "^4.29.1",
+		"@wasm-tool/rollup-plugin-rust": "^1.0.7",
+		"eslint": "^7.32.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"svelte": "^3.38.2",
-		"svelte-check": "^2.1.0",
-		"svelte-preprocess": "^4.7.3",
-		"tslib": "^2.3.0",
-		"typescript": "^4.3.2",
-		"vite": "^2.3.8",
+		"svelte": "^3.42.1",
+		"svelte-check": "^2.2.4",
+		"svelte-preprocess": "^4.7.4",
+		"tslib": "^2.3.1",
+		"typescript": "^4.3.5",
+		"vite": "^2.5.0",
 		"vite-tsconfig-paths": "^3.3.13",
-		"wasm-pack": "^0.9.1"
+		"wasm-pack": "^0.10.0"
 	},
 	"dependencies": {
 		"d3-scale-chromatic": "^3.0.0",
 		"downloadjs": "^1.4.7",
+		"html2canvas": "^1.3.2",
 		"localforage": "^1.9.0",
 		"papaparse": "^5.3.1",
-		"sirv-cli": "^1.0.12",
-		"svelte-frappe-charts": "^1.8.3",
+		"sirv-cli": "^1.0.14",
+		"svelte-frappe-charts": "^1.9.0",
 		"svelte-tabs": "^1.1.0"
 	}
 }
