--- a/wasm_wrapper/Cargo.toml
+++ b/wasm_wrapper/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-adverse-events = { path = "../" }
+adverse-events = { path = "../", default-features = false }
 chrono = "0.4.19"
 lazy_static = "1.4.0"
 serde_json = "1.0.64"
