--- a/web/package.json
+++ b/web/package.json
@@ -8,27 +8,29 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-typescript": "^8.2.5",
-		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.17",
+		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.27",
 		"@types/d3-scale-chromatic": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.29.1",
-		"@typescript-eslint/parser": "^4.29.1",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.33.0",
 		"@wasm-tool/rollup-plugin-rust": "^1.0.7",
 		"eslint": "^7.32.0",
-		"eslint-plugin-svelte3": "^3.2.0",
-		"svelte": "^3.42.1",
-		"svelte-check": "^2.2.4",
-		"svelte-preprocess": "^4.7.4",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"svelte": "^3.43.1",
+		"svelte-check": "^2.2.7",
+		"svelte-preprocess": "^4.9.8",
 		"tslib": "^2.3.1",
-		"typescript": "^4.3.5",
-		"vite": "^2.5.0",
-		"vite-tsconfig-paths": "^3.3.13",
-		"wasm-pack": "^0.10.0"
+		"typescript": "^4.4.3",
+		"vite": "^2.6.5",
+		"vite-plugin-pwa": "^0.11.3",
+		"vite-tsconfig-paths": "^3.3.15",
+		"wasm-pack": "^0.10.1",
+		"workbox-window": "^6.3.0"
 	},
 	"dependencies": {
 		"d3-scale-chromatic": "^3.0.0",
 		"downloadjs": "^1.4.7",
 		"html2canvas": "^1.3.2",
-		"localforage": "^1.9.0",
+		"localforage": "^1.10.0",
 		"papaparse": "^5.3.1",
 		"sirv-cli": "^1.0.14",
 		"svelte-frappe-charts": "^1.9.0",
